--- a/config.toml
+++ b/config.toml
@@ -1,35 +1,42 @@
-baseURL = "https://theninthparadise.github.io/"
+baseURL = "https://github.com/theninthparadise/theninthparadise.github.io"
 languageCode = "en-us"
 title = "The Ninth Paradise"
 theme = "archie"
+# Code Highlight
+pygmentsstyle = "monokai"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
+disqusShortname = "yourDisqusShortname"
+
+paginate=3 # articles per page
 
 [params]
-  mode = "light"  # 可选: "light", "dark", "auto"
-  subtitle = "我的 Hugo 个人网站"
-  brand = "Ninth Paradise"
-  favicon = "/favicon.ico"
+	mode="toggle" # color-mode → light,dark,toggle or auto
+	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
+	subtitle = "Minimal and Clean [blog theme for Hugo](https://github.com/athul/archie)"
+	mathjax = true # enable MathJax support
+	katex = true # enable KaTeX support
 
-  # 是否启用社交链接
-  useCDN = true
 
-[menu]
-  [[menu.main]]
-    name = "Home"
-    url = "/"
-    weight = 1
+# Main menu Items
 
-  [[menu.main]]
-    name = "Blog"
-    url = "/posts/"
-    weight = 2
+[[menu.main]]
+name = "Home"
+url = "/"
+weight = 1
 
-  [[menu.main]]
-    name = "About"
-    url = "/about/"
-    weight = 3
+[[menu.main]]
+name = "All posts"
+url = "/posts"
+weight = 2
 
-[social]
-  github = "theninthparadise"
-  linkedin = "your-linkedin-username"
-  twitter = "your-twitter-handle"
+[[menu.main]]
+name = "About"
+url = "/about"
+weight = 3
 
+[[menu.main]]
+name = "Tags"
+url = "/tags"
+weight = 4
