--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://github.com/theninthparadise/theninthparadise.github.io"
+baseURL = "https://theninthparadise.github.io"
 languageCode = "en-us"
 title = "The Ninth Paradise"
 theme = "archie"
