--- a/config.toml
+++ b/config.toml
@@ -1,42 +1,41 @@
-baseURL = "https://theninthparadise.github.io"
+baseURL = "https://theninthparadise.github.io/"
 languageCode = "en-us"
 title = "The Ninth Paradise"
 theme = "archie"
-# Code Highlight
-pygmentsstyle = "monokai"
-pygmentscodefences = true
-pygmentscodefencesguesssyntax = true
+paginate = 3 # articles per page
 
-disqusShortname = "yourDisqusShortname"
-
-paginate=3 # articles per page
+# Code Highlight Settings (Updated)
+[markup]
+  [markup.highlight]
+    style = "monokai"
+    codeFences = true
+    guessSyntax = true
 
 [params]
-	mode="toggle" # color-mode → light,dark,toggle or auto
-	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
-	subtitle = "Minimal and Clean [blog theme for Hugo](https://github.com/athul/archie)"
-	mathjax = true # enable MathJax support
-	katex = true # enable KaTeX support
-
+  mode = "toggle" # color-mode → light, dark, toggle, auto
+  useCDN = false # Don't use CDNs for fonts and icons, serve them locally
+  subtitle = "Welcome to The Ninth Paradise"
+  mathjax = true # Enable MathJax support
+  katex = true   # Enable KaTeX support
 
 # Main menu Items
+[[menu.main]]
+  name = "Home"
+  url = "/"
+  weight = 1
 
 [[menu.main]]
-name = "Home"
-url = "/"
-weight = 1
+  name = "All posts"
+  url = "/posts/"
+  weight = 2
 
 [[menu.main]]
-name = "All posts"
-url = "/posts"
-weight = 2
+  name = "About"
+  url = "/about/"
+  weight = 3
 
 [[menu.main]]
-name = "About"
-url = "/about"
-weight = 3
+  name = "Tags"
+  url = "/tags/"
+  weight = 4
 
-[[menu.main]]
-name = "Tags"
-url = "/tags"
-weight = 4
